--- a/OnlyAppCheck/OnlyAppCheck/HomePage1.html
+++ b/OnlyAppCheck/OnlyAppCheck/HomePage1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>Top menu</header>
-    <footer>Logo</footer>
+    <footer>Logo Alfa corp.</footer>
     <div><p>main text</p></div>
 </body>
 </html>
