--- a/OnlyAppCheck/OnlyAppCheck/HomePage1.html
+++ b/OnlyAppCheck/OnlyAppCheck/HomePage1.html
@@ -6,6 +6,6 @@
 <body>
     <header>Top menu</header>
     <footer>Logo Alfa corp.</footer>
-    <div><p>main text</p></div>
+    <div><p>main text + test</p></div>
 </body>
 </html>
